--- a/jquery-dialog/index.html
+++ b/jquery-dialog/index.html
@@ -147,16 +147,16 @@
 							<td>自定义按键</td>
 						</tr>
 						<tr>
-							<td>beforeOpen</td>
+							<td>beforeOpen(api)</td>
 							<td>
-								function(api){}
+								[无]
 							</td>
 							<td>打开窗口前事件处理，api为方法接口</td>
 						</tr>
 						<tr>
-							<td>afterClose</td>
+							<td>afterClose(api)</td>
 							<td>
-								function(api){}
+								[无]
 							</td>
 							<td>关闭窗口后事件处理，api为方法接口</td>
 						</tr>
