--- a/jquery-emoticons/index.html
+++ b/jquery-emoticons/index.html
@@ -191,17 +191,17 @@
                             <td>表情选择框弹出位置与默认位置的垂直偏移量</td>
                         </tr>
                         <tr>
-                            <td>onShow</td>
+                            <td>onShow()</td>
                             <td>[无]</td>
                             <td>表情选择框显示时执行</td>
                         </tr>
                         <tr>
-                            <td>onHide</td>
+                            <td>onHide()</td>
                             <td>[无]</td>
                             <td>表情选择框隐藏时执行</td>
                         </tr>
                         <tr>
-                            <td>onSelect</td>
+                            <td>onSelect()</td>
                             <td>[无]</td>
                             <td>选中表情后执行</td>
                         </tr>
