--- a/jquery-range/index.html
+++ b/jquery-range/index.html
@@ -151,13 +151,13 @@ $('#range2').range({
 							<td>outer进度计算以进度条宽为准，inner进度计算需扣除条滑块宽</td>
 						</tr>
 						<tr>
-							<td>onSlide</td>
-							<td>function(){}</td>
+							<td>onSlide(obj)</td>
+							<td>[无]</td>
 							<td>当前值变化时触发的事件，传入对象:event为事件,value为当前值</td>
 						</tr>
 						<tr>
-							<td>onChange</td>
-							<td>function(){}</td>
+							<td>onChange(obj)</td>
+							<td>[无]</td>
 							<td>当前值变化后触发的事件，传入对象:event为事件,value为当前值</td>
 						</tr>
 					</tbody>
