--- a/jquery-select/index.html
+++ b/jquery-select/index.html
@@ -102,7 +102,7 @@
 							<td>下拉菜单选中class</td>
 						</tr>
 						<tr>
-							<td>html</td>
+							<td>html(status)</td>
 							<td>
 								function(status){
 									status.list.append("&lt;li&gt;"+status.item.text()+"&lt;/li&gt;");
@@ -111,10 +111,8 @@
 							<td>下拉菜单自定义结构</td>
 						</tr>
 						<tr>
-							<td>onSelect</td>
-							<td>
-								function(value){}
-							</td>
+							<td>onSelect(value)</td>
+							<td>[无]</td>
 							<td>选择事件处理</td>
 						</tr>
 					</tbody>
