--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -77,11 +77,11 @@ $('.search input[type="text"]').suggestion({
 					url:'http://suggestion.baidu.com/su',
 					FieldName:'wd',
 					jsonp:'cb',
-					onCallback:function(item){
-						var data = item['data']['s'];
-						item.target.empty();
-						for(var i=0;i<data.length;i++){
-							item.target.append('<li>'+data[i]+'</li>');
+					onCallback:function(item,data){
+						var list = data['s'];
+						item.empty();
+						for(var i=0;i<list.length;i++){
+							item.append('<li>'+list[i]+'</li>');
 						}
 					}
 				});
@@ -152,22 +152,22 @@ $('.search input[type="text"]').suggestion({
 							<td>点击确定是否自动提交表单</td>
 						</tr>
 						<tr>
-							<td>beforeSend</td>
+							<td>beforeSend()</td>
 							<td>[无]</td>
 							<td>发送前动作：传入准备提交的表单项目，返回false终止提交</td>
 						</tr>
 						<tr>
-							<td>onCallback</td>
+							<td>onCallback(target,data)</td>
 							<td>[无]</td>
-							<td>获得数据后触发：传入一个对象，target表示被建议列表对象,data表示请求到的数据</td>
+							<td>获得数据后触发：target表示建议列表对象,data表示请求到的数据</td>
 						</tr>
 						<tr>
-							<td>onChange</td>
+							<td>onChange()</td>
 							<td>[无]</td>
 							<td>用户按键盘切换时触发</td>
 						</tr>
 						<tr>
-							<td>onSelect</td>
+							<td>onSelect()</td>
 							<td>[无]</td>
 							<td>选中搜索建议列表项：传入一个对象，target表示当前选中列表项,input表示当前input表单项</td>
 						</tr>
