--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -127,7 +127,7 @@ $('.search input[type="text"]').suggestion({
 							<td>列表项选中class</td>
 						</tr>
 						<tr>
-							<td>dataFormat</td>
+							<td>dataType</td>
 							<td>'jsonp'</td>
 							<td>请求的格式</td>
 						</tr>
