--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -89,7 +89,7 @@ $('.search input[type="text"]').suggestion({
 			<div class="example">
 				<div class="call">
 					<h1>调用方法：</h1>
-					<p>$(selector).suggestion(options);</p>
+					<p>$(selector).suggestion(options,callback);</p>
 				</div>
 				<h2>options参数</h2>
 				<table>
@@ -174,6 +174,25 @@ $('.search input[type="text"]').suggestion({
 				                item.input.val(item.target.text());
 				            }</td>
 							<td>选中搜索建议列表项：传入一个对象，target表示当前选中列表项,input表示当前input表单项</td>
+						</tr>
+					</tbody>
+				</table>
+				<h2>callback(api)参数</h2>
+				<table>
+					<thead>
+						<tr>
+							<th width="200">方法</th>
+							<th>说明</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>show()</td>
+							<td>展示搜索建议面板</td>
+						</tr>
+						<tr>
+							<td>hide()</td>
+							<td>隐藏搜索建议面板</td>
 						</tr>
 					</tbody>
 				</table>
