--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
 							</li>
 							<li>
 								<p><a href="/jquery-popup/" target="_blank">弹出层</a></p>
-								<p>$(selector).popup(options);</p>
+								<p>$(selector).popup(options,callback(api));</p>
 							</li>
 							<li>
 								<p><a href="/jquery-suggestion/" target="_blank">搜索建议</a></p>
-								<p>$(selector).suggestion(options);</p>
+								<p>$(selector).suggestion(options,callback(api));</p>
 							</li>
 							<li>
 								<p><a href="/jquery-citys/" target="_blank">城市三级联动</a></p>
-								<p>$(selector).citys(options);</p>
+								<p>$(selector).citys(options,callback(api));</p>
 							</li>
 							<li>
 								<p><a href="/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
