--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 									<span>/</span>
 									<a href="/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
 								</p>
-								<p>$(selector).calendar(options);</p>
+								<p>$(selector).calendar(options,callback(api));</p>
 							</li>
 							<li>
 								<p><a href="/jquery-popup/" target="_blank">弹出层</a></p>
