--- a/jquery-slider/index.html
+++ b/jquery-slider/index.html
@@ -441,7 +441,7 @@
 							<td>停止播放</td>
 						</tr>
 						<tr>
-							<td>resize()</td>
+							<td>reset()</td>
 							<td>重置幻灯片参数</td>
 						</tr>
 						<tr>
