--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -239,12 +239,12 @@
 							<td>自动播放时的动画时长</td>
 						</tr>
 						<tr>
-							<td>beforeEvent(obj)</td>
+							<td>onChangeStart(obj)</td>
 							<td>[无]</td>
 							<td>切换前执行,返回flase时不移动;传入一个对象,包含：index事件发生前索引,count帧长度,destination目标索引,event事件对象</td>
 						</tr>
 						<tr>
-							<td>afterEvent(obj)</td>
+							<td>onChangeEnd(obj)</td>
 							<td>[无]</td>
 							<td>切换后执行;传入一个对象,包含：index事件发生前索引,count帧长度,destination目标索引,event事件对象</td>
 						</tr>
