--- a/jquery-headroom/index.html
+++ b/jquery-headroom/index.html
@@ -52,7 +52,7 @@
 			</div>
 			<div class="code">
 				<p></p>
-				<p>$('.head').headroom({'hiddenTop':400});</p>
+				<p>$('.head').headroom({'hiddenTop':400,autoHide:false,'scrollOffset':60});</p>
 			</div>
 			<div class="example">
 				<div class="call">
