--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>城市三级联动 - citys</title>
+        <meta name="keywords" content="城市三级联动,行政区划,省市区,区划代码,联动插件">
+        <meta name="description" content="一套简单实用的行政区划选择插件，结合最新的省、市、区、街道数据；独立的数据包极大地方便了插件的更新和使用。">
         <link rel="shortcut icon" href="/public/image/favicon.png">
         <link rel="stylesheet" type="text/css" href="/public/style/cssreset-min.css">
         <link rel="stylesheet" type="text/css" href="/public/style/common.css">
