--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
 								<p>$(selector).accordion(options,callback(api));</p>
 							</li>
 							<li>
+								<p><a href="/jquery-colorpicker/" target="_blank">颜色选择器</a></p>
+								<p>$(selector).colorpicker(options);</p>
+							</li>
+							<li>
 								<p><a href="/jquery-emoticons/" target="_blank">聊天表情</a></p>
 								<p>$.emoticons(options,callback(api));</p>
 							</li>
