--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -202,7 +202,7 @@ $('#demo2').citys({
                         </tr>
                         <tr>
                             <td>dataType</td>
-                            <td>'json'</td>
+                            <td>'jsonp'</td>
                             <td>
                                 <p>数据库类型:'json'或'jsonp'</p>
                                 <p class="warning">IE9-由于默认安全设置，需开启“通过域访问数据源”才能跨域访问json，此类情况建议使用jsonp格式</p>
