--- a/jquery-colorpicker/index.html
+++ b/jquery-colorpicker/index.html
@@ -102,6 +102,11 @@
 							<td>颜色选择器的ID</td>
 						</tr>
 						<tr>
+							<td>size</td>
+							<td>'default'</td>
+							<td>选择器大小；default默认大小，small小号</td>
+						</tr>
+						<tr>
 							<td>hoverChange</td>
 							<td>false</td>
 							<td>悬浮于调色板时是否立即触发修改表单值</td>
