--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -25,7 +25,7 @@
         </style>
         <script type="text/javascript" src="/public/script/jquery.min.js"></script>
         <script type="text/javascript" src="/code/jquery.citys.js"></script>
-        <script src="http://int.dpool.sina.com.cn/iplookup/iplookup.php?format=js"></script>
+        <script src="http://pv.sohu.com/cityjson"></script>
     </head>
     <body>
         <div class="header">
@@ -45,8 +45,8 @@
                 <p>根据IP地址定位：<a href="http://passer-by.com/api/#docs/ip" target="_blank">IP接口文档</a></p>
             </div>
             <script type="text/javascript">
-                if(remote_ip_info){
-                    $('#location').citys({province:remote_ip_info['province'],city:remote_ip_info['city'],area:remote_ip_info['district']});
+                if(returnCitySN){
+                    $('#location').citys({code:returnCitySN['cid']});
                 }
             </script>
             <div id="demo" class="citys">
