--- a/jquery-calendar/slider.html
+++ b/jquery-calendar/slider.html
@@ -188,7 +188,7 @@ $('.calendar3').calendar({
 			</div>
 		</div>
 		<div style="display: none;">
-			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+			<script src="https://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
 		</div>
 	</body>
 <html>
