--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div>
 				<div class="mod-list">
 					<ul>
-						<li><a class="btn" href="http://passer-by.com/" target="_blank">个人网站</a></li>
+						<li><a class="btn" href="https://passer-by.com/" target="_blank">个人网站</a></li>
 						<li><a class="btn" href="https://github.com/mumuy/widget" target="_blank">查看GitHub</a></li>
 						<li><a class="btn" href="https://github.com/mumuy/widget/zipball/master" target="_blank">下载 .zip</a></li>
 					</ul>
@@ -214,7 +214,7 @@
 		</div>
 		<script async defer src="https://buttons.github.io/buttons.js"></script>
 		<div style="display: none;">
-			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+			<script src="https://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
 		</div>
 	</body>
 </html>
