--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -196,7 +196,7 @@ $('#demo2').citys({
                             <td>dataUrl</td>
                             <td>[数据库地址]</td>
                             <td>
-                              <p>最新数据库（<script src="https://passer-by.com/data_location/version.js"></script>）：<a href="https://passer-by.com/data_location/list.json" target="_blank">JSON格式</a><a href="http://passer-by.com/data_location/list.jsonp" target="_blank">JSONP格式</a></p>
+                              <p>最新数据库（<script src="https://passer-by.com/data_location/version.js"></script>）：<a href="https://passer-by.com/data_location/list.json" target="_blank">JSON格式</a><a href="https://passer-by.com/data_location/list.jsonp" target="_blank">JSONP格式</a></p>
                               <p>数据库项目：<a href="https://github.com/mumuy/data_location" target="_blank">中国行政区划（省、市、区、街道）</a></p>
                             </td>
                         </tr>
