--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -199,7 +199,7 @@ $('.search input[type="text"]').suggestion({
 			</div>		
 		</div>
 		<div style="display: none;">
-			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+			<script src="https://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
 		</div>
 	</body>
 <html>
