--- a/jquery-tabs/index.html
+++ b/jquery-tabs/index.html
@@ -284,7 +284,7 @@
 			</div>
 		</div>
 		<div style="display: none;">
-			<script src="http://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
+			<script src="https://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
 		</div>
 	</body>
 <html>
