--- a/jquery-imagezoom/index.html
+++ b/jquery-imagezoom/index.html
@@ -60,7 +60,7 @@ $('#zoom li').imagezoom({
 			<div class="example">
 				<div class="call">
 					<h1>调用方法：</h1>
-					<p>$(selector).slider(options);</p>
+					<p>$(selector).imagezoom(options);</p>
 				</div>
 				<h2>options参数</h2>
 				<table>
