--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -59,7 +59,7 @@
 				<p>百度搜索建议</p>
 <pre>
 $('.search input[type="text"]').suggestion({
-	url:'http://suggestion.baidu.com/su',
+	url:'https://www.baidu.com/sugrec',
 	FieldName:'wd',
 	jsonp:'cb',
 	onCallback:function(item,data){
@@ -74,7 +74,7 @@ $('.search input[type="text"]').suggestion({
 			</div>
 			<script type="text/javascript">
 				$('.search input[type="text"]').suggestion({
-					url:'http://suggestion.baidu.com/su',
+					url:'https://www.baidu.com/sugrec',
 					FieldName:'wd',
 					jsonp:'cb',
 					onCallback:function(item,data){
