--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 		</div>
 		<script async defer src="https://buttons.github.io/buttons.js"></script>
 		<div style="display: none;">
+			<a href="https://www.huanlianjie.com/jquerywidget.com/#47" target="_blank">换链接</a>
 			<script src="https://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
 		</div>
 	</body>
