--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -124,7 +124,7 @@ $('#demo2').citys({
     $town.hide().empty();
     if(info['code']%1e4&&info['code']<7e6){	//是否为“区”且不是港澳台地区
     	$.ajax({
-    		url:'https://passer-by.com/data_location/town/'+info['code']+'.json',
+    		url:'https://passer-by.com/data_location/code/'+info['code']+'.json',
     		dataType:'json',
     		success:function(town){
     			$town.show();
@@ -154,7 +154,7 @@ $('#demo2').citys({
         			$town.hide().empty();
         			if(info['code']%1e4&&info['code']<7e5){	//是否为“区”且不是港澳台地区
         				$.ajax({
-        					url:'https://passer-by.com/data_location/town/'+info['code']+'.json',
+        					url:'https://passer-by.com/data_location/code/'+info['code']+'.json',
         					dataType:'json',
         					success:function(town){
         						$town.show();
