--- a/jquery-emoticons/index.html
+++ b/jquery-emoticons/index.html
@@ -153,7 +153,7 @@
                         <tr>
                             <td>prefix</td>
                             <td>'widget'</td>
-                            <td>弹出层结构中节点class的前缀</td>
+                            <td>自定义节点class的前缀</td>
                         </tr>
                         <tr>
                             <td>publisherCls</td>
