--- a/jquery-headroom/index.html
+++ b/jquery-headroom/index.html
@@ -70,14 +70,14 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>fixedTop</td>
-							<td>0</td>
-							<td>浮动距离浏览器视窗顶部的位置</td>
-						</tr>
-						<tr>
 							<td>hiddenTop</td>
 							<td>[自动计算]</td>
 							<td>滚动到哪个位置开始隐藏菜单</td>
+						</tr>
+						<tr>
+							<td>fixedTop</td>
+							<td>0</td>
+							<td>浮动距离浏览器视窗顶部的位置</td>
 						</tr>
 						<tr>
 							<td>duration</td>
@@ -93,6 +93,21 @@
 							<td>scrollOffset</td>
 							<td>0</td>
 							<td>描点滚动偏移顶部距离</td>
+						</tr>
+						<tr>
+							<td>zIndex</td>
+							<td>9999</td>
+							<td>图层z-index</td>
+						</tr>
+						<tr>
+							<td>isScrollActive</td>
+							<td>true</td>
+							<td>滚动是改变选中状态</td>
+						</tr>
+						<tr>
+							<td>activeIndex</td>
+							<td>0</td>
+							<td>默认选中菜单</td>
 						</tr>
 						<tr>
 							<td>activeCls</td>
