--- a/jquery-popup/index.html
+++ b/jquery-popup/index.html
@@ -69,10 +69,10 @@
 			</div>
 			<div class="code">
 				<p>触发点右侧与弹出层左侧垂直居中对齐</p>
-				<p>$('.popup2').popup({trigger:'.trigger',triggerType:'mouse',node:'ul',points:['rc','lc']});</p>
+				<p>$('.popup2').popup({trigger:'.trigger',triggerType:'click',node:'ul',points:['rc','lc']});</p>
 			</div>
 			<script type="text/javascript">
-				$('.popup2').popup({trigger:'.trigger',triggerType:'mouse',node:'ul',points:['rc','lc']});
+				$('.popup2').popup({trigger:'.trigger',triggerType:'click',node:'ul',points:['rc','lc']});
 			</script>
 			<div class="popup popup3">
 				<img class="small" src="image/test.jpg" width="100" height="100"/>
