--- a/jquery-suggestion/index.html
+++ b/jquery-suggestion/index.html
@@ -135,6 +135,21 @@ $('.search input[type="text"]').suggestion({
 							<td>提示框的内容class</td>
 						</tr>
 						<tr>
+							<td>activeCls</td>
+							<td>'active'</td>
+							<td>列表项选中class</td>
+						</tr>
+						<tr>
+							<td>triggerNode</td>
+							<td>'li'</td>
+							<td>建议列表中触发选择的节点</td>
+						</tr>
+						<tr>
+							<td>itemFormat</td>
+							<td>function(item){return item['name'];}</td>
+							<td>建议列表节点样式</td>
+						</tr>
+						<tr>
 							<td>FieldName</td>
 							<td>'word'</td>
 							<td>当前input表单项在请求接口时的字段名</td>
@@ -143,11 +158,6 @@ $('.search input[type="text"]').suggestion({
 							<td>dynamic</td>
 							<td>true</td>
 							<td>是否需要异步请求数据</td>
-						</tr>
-						<tr>
-							<td>activeCls</td>
-							<td>'active'</td>
-							<td>列表项选中class</td>
 						</tr>
 						<tr>
 							<td>dataType</td>
