--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -286,6 +286,10 @@ $('#demo2').citys({
                             <td>getInfo(data)</td>
                             <td>获取当前选中的地区信息:direct是否为直辖市,province省份(省级)名称,city城市(地级)名称,area地区(县区级)名称,code地区编码</td>
                         </tr>
+                        <tr>
+                            <td>setCode(code)</td>
+                            <td>通过code设置地区</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
