--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -294,8 +294,14 @@ $('#demo2').citys({
                 </table>
             </div>
         </div>
-        <div style="display: none;">
-            <script src="https://s11.cnzz.com/z_stat.php?id=1260218562&web_id=1260218562"></script>
-        </div>
+        <script>
+            var _hmt = _hmt || [];
+            (function() {
+              var hm = document.createElement("script");
+              hm.src = "https://hm.baidu.com/hm.js?134d31aed1aec463afbaa9e0bec45001";
+              var s = document.getElementsByTagName("script")[0]; 
+              s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
     </body>
 </html>
