--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 					</ul>
 				</div>
 				<div class="mod-botton">
-					<a class="github-button" href="https://github.com/mumuy" data-style="mega" data-count-href="/mumuy/followers" data-count-api="/users/mumuy#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @mumuy on GitHub">Follow @mumuy</a>
-					<a class="github-button" href="https://github.com/mumuy/widget" data-style="mega" data-count-href="/mumuy/widget/stargazers" data-count-api="/repos/mumuy/widget#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star mumuy/widget on GitHub">Star</a>
+					<a class="github-button" href="https://github.com/mumuy" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" aria-label="Follow @mumuy on GitHub">Follow @mumuy</a>
+					<a class="github-button" href="https://github.com/mumuy/widget" data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star mumuy/widget on GitHub">Star</a>
 				</div>
 			</header>
 			<div class="container">
