--- a/jquery-citys/index.html
+++ b/jquery-citys/index.html
@@ -267,6 +267,11 @@ $('#demo2').citys({
                             <td>当无数据时的表现形式:'hidden'隐藏,'disabled'禁用,为空不做任何处理</td>
                         </tr>
                         <tr>
+                            <td>placeholder</td>
+                            <td>' - 请选择 - '</td>
+                            <td>非必要选择是，默认空值的文本内容</td>
+                        </tr>
+                        <tr>
                             <td>onChange(info)</td>
                             <td>[无]</td>
                             <td>地区切换时触发,回调函数传入地区信息:direct是否为直辖市,province省份(省级)名称,city城市(地级)名称,area地区(县区级)名称,code地区编码</td>
