--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 		<link rel="stylesheet" type="text/css" href="/public/style/common.css">
 		<style type="text/css">
 			header{
-				margin-bottom: 100px;
+				height: 210px;
+				padding: 100px 0 25px;
+				background: url(public/image/bg.svg) center top repeat-x;
+				color: #fff;
+				border: 1px solid rgba(0,0,0,0.015);
+				margin-bottom: 50px;
 			}
 			.container{
 				padding-bottom: 120px;
 			}
-			.main{
+			.inner{
 				width:960px;
 				margin:0 auto;
 			}
@@ -29,21 +34,23 @@
 			    z-index: 99;
 			}
 			.mod-head{
-				width: 960px;
-				padding-top: 120px;
-				margin: 0 auto 50px;
+				margin-bottom: 35px;
 				line-height: 1.2;
 				text-align: center;
 			}
 			.mod-head h1{
-				font-size: 48px;
+				font-weight: bold;
+				line-height: 54px;
+				font-size: 42px;
+				color: #1a2b3b;
 			}
 			.mod-head p{
+				line-height: 30px;
 				font-size: 16px;
+				color: #1a2b3b;
 			}
 			.mod-list{
-				width: 960px;
-				margin: 0 auto 20px;
+				margin-bottom: 15px;
 				text-align: center;
 			}
 			.mod-list li{
@@ -52,21 +59,23 @@
 			}
 			.mod-list .btn{
 				display: block;
-				padding: 6px 12px;
-			    background-color: #fff;
-			    border: 1px solid #333;
-			    border-radius: 3px;
-			    color: #333;
+				padding: 0 15px;
+			    height: 36px;
+			    background: rgba(255,255,255,0.8);
+			    border: 1px solid rgba(0,0,0,0.05);
+			    line-height: 36px;
+				font-size: 15px;
+			    color: #666;
+			    border-radius: 6px;
 			    transition: color 0.2s, background-color 0.2s, border-color 0.2s;
 			}
 			.mod-list .btn:hover{
-				background-color: #333;
-				color:#fff;
+				background-color: rgba(255,255,255,1);
 			}
 			.mod-botton{
 				width: 960px;
 				height: 32px;
-				margin: 0 auto 20px;
+				margin: 0 auto 15px;
 				text-align: center;
 			}
 			.mod-content{
@@ -79,8 +88,17 @@
 			.mod-content li{
 				float: left;
 				width: 50%;
-				margin-bottom: 10px;
 				line-height: 20px;
+			}
+			.mod-content .item{
+				padding: 10px 15px;
+				background: #fafafa;
+				margin: 0 4px 8px;
+				border-radius: 5px;
+				cursor: pointer;
+			}
+			.mod-content .item:hover{
+				background: #f5f5f5;
 			}
 			.mod-content a.hot{
 				color: #cc0000;
@@ -98,8 +116,7 @@
 			}
 
 			::selection {
-			    color: white;
-			    background-color: #333;
+			    background-color: rgba(255,255,255,0.1);
 			}
 		</style>
 	</head>
@@ -107,100 +124,139 @@
 		<div class="wrapper">
 			<header>
 				<div class="mod-head">
-					<h1>我的Web组件库</h1>
-					<p>让前端开发快到飞起来～</p>
+					<div class="inner">
+						<h1>我的Web组件库</h1>
+						<p>让前端开发快到飞起来～</p>
+					</div>
 				</div>
 				<div class="mod-list">
-					<ul>
-						<li><a class="btn" href="https://passer-by.com/" target="_blank">个人网站</a></li>
-						<li><a class="btn" href="https://github.com/mumuy/widget" target="_blank">查看GitHub</a></li>
-						<li><a class="btn" href="https://github.com/mumuy/widget/zipball/master" target="_blank">下载 .zip</a></li>
-					</ul>
+					<div class="inner">
+						<ul>
+							<li><a class="btn" href="https://passer-by.com/" target="_blank">个人网站</a></li>
+							<li><a class="btn" href="https://github.com/mumuy/widget" target="_blank">查看GitHub</a></li>
+							<li><a class="btn" href="https://github.com/mumuy/widget/zipball/master" target="_blank">下载 .zip</a></li>
+						</ul>
+					</div>
 				</div>
 				<div class="mod-botton">
-					<a class="github-button" href="https://github.com/mumuy" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" aria-label="Follow @mumuy on GitHub">Follow @mumuy</a>
-					<a class="github-button" href="https://github.com/mumuy/widget" data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star mumuy/widget on GitHub">Star</a>
+					<div class="inner">
+						<a class="github-button" href="https://github.com/mumuy" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" aria-label="Follow @mumuy on GitHub">Follow @mumuy</a>
+						<a class="github-button" href="https://github.com/mumuy/widget" data-color-scheme="no-preference: light; light: light; dark: dark;" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star mumuy/widget on GitHub">Star</a>
+					</div>
 				</div>
 			</header>
 			<div class="container">
-				<div class="main">
+				<div class="inner">
 					<div class="mod-content">
 						<ul>
 							<li>
-								<p>
-									<a class="hot" href="/jquery-slider/" target="_blank">轮播</a>
-									<span>/</span>
-									<a href="/jquery-slider/subject.html" target="_blank">全屏轮播</a>
-								<p>
-								<p>$(selector).slider(options,callback(api));</p>
+								<div class="item">
+									<p>
+										<a class="hot" href="/jquery-slider/" target="_blank">轮播</a>
+										<span>/</span>
+										<a href="/jquery-slider/subject.html" target="_blank">全屏轮播</a>
+									<p>
+									<p>$(selector).slider(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-tabs/" target="_blank">标签页</a></p>
-								<p>$(selector).tabs(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-tabs/" target="_blank">标签页</a></p>
+									<p>$(selector).tabs(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-scrollbar/" target="_blank">滚动条</a></p>
-								<p>$(selector).scrollbar(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-scrollbar/" target="_blank">滚动条</a></p>
+									<p>$(selector).scrollbar(options,callback(api));</p>
 							</li>
 							<li>
-								<p><a href="/jquery-select/" target="_blank">下拉框</a></p>
-								<p>$(selector).select(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-select/" target="_blank">下拉框</a></p>
+									<p>$(selector).select(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-range/" target="_blank">滑动条</a></p>
-								<p>$(selector).range(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-range/" target="_blank">滑动条</a></p>
+									<p>$(selector).range(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-dialog/" target="_blank">对话框</a></p>
-								<p>$(selector).dialog(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-dialog/" target="_blank">对话框</a></p>
+									<p>$(selector).dialog(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-countdown/" target="_blank">倒计时</a></p>
-								<p>$(selector).countdown(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-countdown/" target="_blank">倒计时</a></p>
+									<p>$(selector).countdown(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-imagezoom/" target="_blank">图片聚焦</a></p>
-								<p>$(selector).imagezoom(options);</p>
+								<div class="item">
+									<p><a href="/jquery-imagezoom/" target="_blank">图片聚焦</a></p>
+									<p>$(selector).imagezoom(options);</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-headroom/" target="_blank">浮动菜单</a></p>
-								<p>$(selector).headroom(options);</p>
+								<div class="item">
+									<p><a href="/jquery-headroom/" target="_blank">浮动菜单</a></p>
+									<p>$(selector).headroom(options);</p>
+								</div>
 							</li>
 							<li>
-								<p>
-									<a href="/jquery-calendar/" target="_blank">日历</a>
-									<span>/</span>
-									<a href="/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
-								</p>
-								<p>$(selector).calendar(options,callback(api));</p>
+								<div class="item">
+									<p>
+										<a href="/jquery-calendar/" target="_blank">日历</a>
+										<span>/</span>
+										<a href="/jquery-calendar/slider.html" target="_blank">滑动日历(基于轮播)</a>
+									</p>
+									<p>$(selector).calendar(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-popup/" target="_blank">弹出层</a></p>
-								<p>$(selector).popup(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-popup/" target="_blank">弹出层</a></p>
+									<p>$(selector).popup(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-suggestion/" target="_blank">搜索建议</a></p>
-								<p>$(selector).suggestion(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-suggestion/" target="_blank">搜索建议</a></p>
+									<p>$(selector).suggestion(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-citys/" target="_blank">城市三级联动</a></p>
-								<p>$(selector).citys(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-citys/" target="_blank">城市三级联动</a></p>
+									<p>$(selector).citys(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
-								<p>$(selector).inputFormat(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
+									<p>$(selector).inputFormat(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-accordion/" target="_blank">手风琴</a></p>
-								<p>$(selector).accordion(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-accordion/" target="_blank">手风琴</a></p>
+									<p>$(selector).accordion(options,callback(api));</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-colorpicker/" target="_blank">颜色选择器</a></p>
-								<p>$(selector).colorpicker(options);</p>
+								<div class="item">
+									<p><a href="/jquery-colorpicker/" target="_blank">颜色选择器</a></p>
+									<p>$(selector).colorpicker(options);</p>
+								</div>
 							</li>
 							<li>
-								<p><a href="/jquery-emoticons/" target="_blank">聊天表情</a></p>
-								<p>$.emoticons(options,callback(api));</p>
+								<div class="item">
+									<p><a href="/jquery-emoticons/" target="_blank">聊天表情</a></p>
+									<p>$.emoticons(options,callback(api));</p>
+								</div>
 							</li>
 						</ul>
 					</div>
@@ -212,13 +268,26 @@
 				</div>
 			</footer>
 		</div>
+		<script type="text/javascript">
+			var $list = document.querySelectorAll('.item');
+			for(var i=0;i<$list.length;i++){
+				$list[i].addEventListener('click',function(event) {
+					var $link = this.getElementsByTagName('A');
+					if($link.length){
+						var url = $link[0].getAttribute('href');
+						window.open(url);
+					}
+					console.log('[click]',event);
+				});
+			}
+		</script>
 		<script async defer src="https://buttons.github.io/buttons.js"></script>
 		<script>
 			var _hmt = _hmt || [];
 			(function() {
 			  var hm = document.createElement("script");
 			  hm.src = "https://hm.baidu.com/hm.js?134d31aed1aec463afbaa9e0bec45001";
-			  var s = document.getElementsByTagName("script")[0]; 
+			  var s = document.getElementsByTagName("script")[0];
 			  s.parentNode.insertBefore(hm, s);
 			})();
 		</script>
