--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
 							</li>
 							<li>
 								<div class="item">
+									<p><a href="/jquery-tablesort/" target="_blank">表格排序</a></p>
+									<p>$(selector).tablesort(options);</p>
+								</div>
+							</li>
+							<li>
+								<div class="item">
 									<p><a href="/jquery-inputFormat/" target="_blank">格式化输入框</a></p>
 									<p>$(selector).inputFormat(options,callback(api));</p>
 								</div>
