--- a/jquery-tablesort/index.html
+++ b/jquery-tablesort/index.html
@@ -149,24 +149,24 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>contentCls</td>
-							<td>'content'</td>
-							<td>内容列表的class</td>
+							<td>sortCls</td>
+							<td>'sortabled'</td>
+							<td>排序th的class</td>
 						</tr>
 						<tr>
-							<td>navCls</td>
-							<td>'nav'</td>
-							<td>导航列表的class</td>
+							<td>ascCls</td>
+							<td>'sort-asc'</td>
+							<td>升序排序时的class</td>
 						</tr>
 						<tr>
-							<td>prevBtnCls</td>
-							<td>'prev'</td>
-							<td>向前一步的class</td>
+							<td>descCls</td>
+							<td>'sort-desc'</td>
+							<td>降序排序时的class</td>
 						</tr>
 						<tr>
-							<td>nextBtnCls</td>
-							<td>'next'</td>
-							<td>向后一步的class</td>
+							<td>activeCls</td>
+							<td>'active'</td>
+							<td>单元格排序时的class</td>
 						</tr>
 						<tr>
 							<td>activeCls</td>
@@ -174,80 +174,9 @@
 							<td>导航选中时的class</td>
 						</tr>
 						<tr>
-							<td>effect</td>
-							<td>'none'</td>
-							<td>切换的效果:'none'表直接切换,'fade'表淡入淡出效果</td>
-						</tr>
-						<tr>
-							<td>triggerType</td>
-							<td>'mouse'</td>
-							<td>切换时的触发事件类型:"mouse"表鼠标移入时触发,"click"表示鼠标点击时触发</td>
-						</tr>
-						<tr>
-							<td>triggerCondition</td>
-							<td>*</td>
-							<td>导航项的条件</td>
-						</tr>
-						<tr>
-							<td>activeIndex</td>
-							<td>0</td>
-							<td>默认选中导航项的索引</td>
-						</tr>
-						<tr>
-							<td>auto</td>
-							<td>false</td>
-							<td>是否自动播放</td>
-						</tr>
-						<tr>
-							<td>delay</td>
-							<td>3000</td>
-							<td>自动播放时停顿的时间间隔</td>
-						</tr>
-						<tr>
-							<td>duration</td>
-							<td>500</td>
-							<td>自动播放时的动画时长</td>
-						</tr>
-						<tr>
-							<td>onChangeStart(obj)</td>
-							<td>[无]</td>
-							<td>切换前执行,返回flase时不移动;传入一个对象,包含：index事件发生前索引,count帧长度,destination目标索引,event事件对象</td>
-						</tr>
-						<tr>
-							<td>onChangeEnd(obj)</td>
-							<td>[无]</td>
-							<td>切换后执行;传入一个对象,包含：index事件发生前索引,count帧长度,destination目标索引,event事件对象</td>
-						</tr>
-					</tbody>
-				</table>
-				<h2>callback(api)参数</h2>
-				<table>
-					<thead>
-						<tr>
-							<th width="200">方法</th>
-							<th>说明</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>setIndex(value)</td>
-							<td>切换标签页</td>
-						</tr>
-						<tr>
-							<td>stop()</td>
-							<td>停止自动播放</td>
-						</tr>
-						<tr>
-							<td>start()</td>
-							<td>开始自动播放</td>
-						</tr>
-						<tr>
-							<td>getIndex()</td>
-							<td>获取当前帧</td>
-						</tr>
-						<tr>
-							<td>getSize()</td>
-							<td>获取帧数</td>
+							<td>onSortEnd</td>
+							<td>function(index,type){}</td>
+							<td>排序完成后调用</td>
 						</tr>
 					</tbody>
 				</table>
