--- a/index.html
+++ b/index.html
@@ -275,15 +275,26 @@
 			</footer>
 		</div>
 		<script type="text/javascript">
+			function stopDefault(e) {
+				if ( e && e.preventDefault ){
+					e.preventDefault();
+				}else{
+					window.event.returnValue = false;
+				}
+				return false;
+			}
 			var $list = document.querySelectorAll('.item');
 			for(var i=0;i<$list.length;i++){
 				$list[i].addEventListener('click',function(event) {
+					if(event.target.tagName=='A'){
+						return false;
+					}
 					var $link = this.getElementsByTagName('A');
 					if($link.length){
 						var url = $link[0].getAttribute('href');
 						window.open(url);
+						stopDefault(event);
 					}
-					console.log('[click]',event);
 				});
 			}
 		</script>
